@@ -1,3 +1,13 @@
+** v3.20, xx.xx.2018**
+* Add an itemlevel link feature. Shows the slot/item level on linked items in chat.
+* Update a lot of skins.
+* Change the default position for the WorldMap.
+* Add the ls_Toast skin to my Plugin.
+* Add my logo on the ElvUI config.
+* Remove the custom Minimap blip textures.
+* Remove my Expressway font.
+* Remove the move Blizz function.
+
 ** v3.19, 30.01.2018**
 * Add an EquipSet Bar. Thx Azilroka for this <3
 * Fix Party/Raid position for high resolutions.
